--- a/Fix scoring update problem.ipynb
+++ b/Fix scoring update problem.ipynb
@@ -10,18 +10,8 @@
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
-    "%autoreload 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%aimport mapster\n"
+    "%autoreload 1\n",
+    "%aimport mapster"
    ]
   },
   {
