Threaded google distance matrix
Added threading for the google distance matrix searching.  Also
separated out the yelp calls to prevent repeat calls to the same
business.  There is now a running database of yelp businesses.

Both things vastly sped up computation, which was primarily limited by
url lib calls

--- a/Fixing pandas.ipynb
+++ b/Fixing pandas.ipynb
@@ -9402,6 +9402,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "yelp_map_watertown.to_pickle('./pickles/yelp_map_watertown.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "yelp_map_jamaica_plain.to_pickle('./pickles/yelp_map_jamaica_plain.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
