--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -16624,7 +16624,7 @@
    "source": [
     "# starting here 4/19/2015\n",
     "\n",
-    "got chinese done"
+    "got chinese done.  maybe can get 3 done."
    ]
   },
   {
@@ -17300,6 +17300,236 @@
    "source": [
     "outer.to_pickle('./pickles/outside_watertown_jamaica_plain.pkl')\n",
     "map_yelp_outer.to_pickle('./pickles/map_yelp_outside_watertown_jamaica_plain.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4/20/2015\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outer = pd.read_pickle('./pickles/outside_watertown_jamaica_plain.pkl')\n",
+    "map_yelp_outer = pd.read_pickle('./pickles/map_yelp_outside_watertown_jamaica_plain.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yelp search failed for this location: Boston College Boston College - Brighton Campus 9 Lake Street Boston MA 02135 USA\n",
+      "Yelp search failed for this location: Boston College Boston College - Brighton Campus 2119-2163 Highway 30 Boston MA 02135 USA\n",
+      "Yelp search failed for this location: Boston College Boston College - Brighton Campus Blessed Peter Faber Jesuit Community 194 Foster Street Boston MA 02135 USA\n",
+      "Yelp search failed for this location: Harvard University Harvard Law School 1557 Massachusetts Avenue Cambridge MA 02138 USA\n",
+      "Yelp search failed for this location: Harvard Medical University Longwood Campus 240 Longwood Avenue Boston MA 02115 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 232-286 Vassar Street Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Harvard Medical University Longwood Campus 665 Huntington Avenue Boston MA 02115 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 17-25 Pacific Street Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 171-173 Amherst Alley Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 297 Massachusetts Avenue Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 141-173 Massachusetts Avenue Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 1-33 Portland Street Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 48-84 Massachusetts 2A Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Massachusetts Institute of Technology 305 Massachusetts Avenue Cambridge MA 02139 USA\n",
+      "Yelp search failed for this location: Wentworth Institute of Technology 55 Annunciation Road Roxbury Crossing MA 02120 USA\n"
+     ]
+    }
+   ],
+   "source": [
+    "map_yelp_outer2 = mapster.map_yelp(outer,'mexican')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business lat</th>\n",
+       "      <th>business lng</th>\n",
+       "      <th>business name</th>\n",
+       "      <th>error</th>\n",
+       "      <th>error-message</th>\n",
+       "      <th>id</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>oauth2-ascii-error</th>\n",
+       "      <th>px</th>\n",
+       "      <th>py</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>search</th>\n",
+       "      <th>seconds</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3547</th>\n",
+       "      <td> 42.32263</td>\n",
+       "      <td>-71.10325</td>\n",
+       "      <td> Latino Restaurant</td>\n",
+       "      <td> False</td>\n",
+       "      <td> None</td>\n",
+       "      <td> latino-restaurant-jamaica-plain</td>\n",
+       "      <td> 42.327458</td>\n",
+       "      <td>-71.093731</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 1268850</td>\n",
+       "      <td> 1551850</td>\n",
+       "      <td>   4</td>\n",
+       "      <td> mexican</td>\n",
+       "      <td> 1092</td>\n",
+       "      <td>  68.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3548</th>\n",
+       "      <td> 42.33861</td>\n",
+       "      <td>-71.07604</td>\n",
+       "      <td>         El Centro</td>\n",
+       "      <td> False</td>\n",
+       "      <td> None</td>\n",
+       "      <td>                el-centro-boston</td>\n",
+       "      <td> 42.327458</td>\n",
+       "      <td>-71.093731</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 1268850</td>\n",
+       "      <td> 1551850</td>\n",
+       "      <td> 3.5</td>\n",
+       "      <td> mexican</td>\n",
+       "      <td> 1620</td>\n",
+       "      <td> 132.244898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3549</th>\n",
+       "      <td> 42.31161</td>\n",
+       "      <td>-71.08102</td>\n",
+       "      <td>        La Cuchara</td>\n",
+       "      <td> False</td>\n",
+       "      <td> None</td>\n",
+       "      <td>               la-cuchara-boston</td>\n",
+       "      <td> 42.306832</td>\n",
+       "      <td>-71.093731</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 1268850</td>\n",
+       "      <td> 1552175</td>\n",
+       "      <td>   5</td>\n",
+       "      <td> mexican</td>\n",
+       "      <td>  718</td>\n",
+       "      <td>  58.612245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3550</th>\n",
+       "      <td> 42.30914</td>\n",
+       "      <td>-71.10532</td>\n",
+       "      <td>      El Embajador</td>\n",
+       "      <td> False</td>\n",
+       "      <td> None</td>\n",
+       "      <td>      el-embajador-jamaica-plain</td>\n",
+       "      <td> 42.306832</td>\n",
+       "      <td>-71.093731</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 1268850</td>\n",
+       "      <td> 1552175</td>\n",
+       "      <td> 3.5</td>\n",
+       "      <td> mexican</td>\n",
+       "      <td> 1124</td>\n",
+       "      <td> 124.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3551</th>\n",
+       "      <td> 42.31634</td>\n",
+       "      <td>-71.10328</td>\n",
+       "      <td>  Amory Restaurant</td>\n",
+       "      <td> False</td>\n",
+       "      <td> None</td>\n",
+       "      <td>  amory-restaurant-jamaica-plain</td>\n",
+       "      <td> 42.306832</td>\n",
+       "      <td>-71.093731</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 1268850</td>\n",
+       "      <td> 1552175</td>\n",
+       "      <td>   3</td>\n",
+       "      <td> mexican</td>\n",
+       "      <td> 1117</td>\n",
+       "      <td>  44.680000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     business lat business lng      business name  error error-message  \\\n",
+       "3547     42.32263    -71.10325  Latino Restaurant  False          None   \n",
+       "3548     42.33861    -71.07604          El Centro  False          None   \n",
+       "3549     42.31161    -71.08102         La Cuchara  False          None   \n",
+       "3550     42.30914    -71.10532       El Embajador  False          None   \n",
+       "3551     42.31634    -71.10328   Amory Restaurant  False          None   \n",
+       "\n",
+       "                                   id        lat        lng  \\\n",
+       "3547  latino-restaurant-jamaica-plain  42.327458 -71.093731   \n",
+       "3548                 el-centro-boston  42.327458 -71.093731   \n",
+       "3549                la-cuchara-boston  42.306832 -71.093731   \n",
+       "3550       el-embajador-jamaica-plain  42.306832 -71.093731   \n",
+       "3551   amory-restaurant-jamaica-plain  42.306832 -71.093731   \n",
+       "\n",
+       "     oauth2-ascii-error       px       py rating   search  seconds       score  \n",
+       "3547              False  1268850  1551850      4  mexican     1092   68.250000  \n",
+       "3548              False  1268850  1551850    3.5  mexican     1620  132.244898  \n",
+       "3549              False  1268850  1552175      5  mexican      718   58.612245  \n",
+       "3550              False  1268850  1552175    3.5  mexican     1124  124.888889  \n",
+       "3551              False  1268850  1552175      3  mexican     1117   44.680000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_yelp_outer2.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ran out of keys, need to fill in map_yelp_outer2... "
    ]
   }
  ],
